--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
+  },
+  "packageManager": "pnpm@10.18.0",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@types/lodash": "^4.17.20",
