--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "engines": {
     "node": ">=18.0.0",
-    "pnpm": ">=8.0.0"
+    "pnpm": "10.18.0"
   },
   "packageManager": "pnpm@10.18.0",
   "dependencies": {
