--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,14 +6,14 @@ phases:
     runtime-versions:
       nodejs: 18
     commands:
-      - echo Installing dependencies with pnpm (using Corepack)...
+      - echo "Installing dependencies with pnpm using Corepack..."
       - corepack enable
       - corepack prepare pnpm@10.18.0 --activate
       - pnpm install --frozen-lockfile
 
   build:
     commands:
-      - echo Building the React app ...
+      - echo "Building the React app..."
       - pnpm run build
 
 artifacts:
