--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,13 +31,16 @@ jobs:
     - name: Setup pnpm
       uses: pnpm/action-setup@v2
       with:
-        version: 8
+        version: 10.18.0
+
+    - name: Verify pnpm version
+      run: pnpm -v
 
     # Cache pnpm store to speed up installs on subsequent runs
     - name: Cache pnpm store
       uses: actions/cache@v4
       with:
-        path: ~/.pnpm-store
+        path: ${{ runner.os == 'Windows' && 'C:\\Users\\runneradmin\\.pnpm-store' || '~/.pnpm-store' }}
         key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
         restore-keys: |
           ${{ runner.os }}-pnpm-store-
