Fix command order in build step for consistency

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,5 +49,5 @@ jobs:
       run: pnpm install --frozen-lockfile
 
     - name: Build
-      run: pnpm run build --if-present
+      run: pnpm run --if-present build
 
