--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "packageManager": "pnpm@10.18.0",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@types/jspdf": "^1.3.3",
     "@types/lodash": "^4.17.20",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "idb": "^8.0.3",
+    "jspdf": "^3.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "ogl": "^1.0.11",
