--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "preview": "vite preview"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "pnpm": "10.18.0"
+    "node": ">=18.0.0"
   },
   "packageManager": "pnpm@10.18.0",
   "dependencies": {
