fix: update API URL from localhost to production server for consistency across environment configurations

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
 
 # API Configuration
-VITE_API_URL=http://localhost:3000/api
+VITE_API_URL=http://16.16.169.133/api
 
 # Google Maps Configuration
 VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
