feat: add LanguageSwitcher component with multilingual support
- Implemented LanguageSwitcher component for language selection.
- Integrated i18next for internationalization with English, Sinhala, and Tamil languages.
- Added language JSON files for common translations in each language.
- Configured i18next with language detection and fallback options.

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_STRIPE_PUBLISHABLE_KEY=pk_test_51SGH7h0XHHsP30LhCIrRZTCmF9mbYABQDObEvguHuL4
 VITE_API_BASE_URL=https://zia-backend-ll7ny.ondigitalocean.app/api
 VITE_MESSAGING_BASE_URL=https://stingray-app-t6jhs.ondigitalocean.app/messaging
 VITE_FRONTEND_URL=https://zia-tgsix.ondigitalocean.app
+VITE_GEMINI_API_KEY=AIzaSyAZCuRzeBNm-9vcW5svMPLjCTfsWhTcHMg
