--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@types/google.maps": "^3.58.1",
     "@types/jspdf": "^1.3.3",
     "@types/lodash": "^4.17.20",
-    "@types/three": "^0.180.0",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "idb": "^8.0.3",
     "jspdf": "^3.0.3",
     "lodash": "^4.17.21",
@@ -43,6 +45,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^16.0.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "recharts": "^3.2.1",
@@ -59,6 +62,7 @@
     "@types/prop-types": "^15.7.15",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/three": "^0.180.0",
     "@vitejs/plugin-react": "^4.6.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
@@ -69,7 +73,7 @@
     "jsdom": "^27.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "^6.0.0",
+    "vite": "^7.0.4",
     "vitest": "^3.2.4"
   }
 }
