--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "lucide-react": "^0.525.0",
     "ogl": "^1.0.11",
     "prop-types": "^15.8.1",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^16.0.1",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.7.1",
     "recharts": "^3.2.1",
     "socket.io-client": "^4.8.1",
