--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
     "build": "tsc -b && vite build",
     "start": "vite preview --host 0.0.0.0 --port ${PORT:-3000}",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "preview": "vite preview"
   },
   "engines": {
     "node": ">=18.0.0"
